--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -899,7 +899,9 @@
 														<td th:unless="${riepilogo.value.ruolo?.ruoloBase == null}" th:text="${riepilogo.value.ruolo?.ruoloBase.codifica}"></td>
 														<td th:if="${riepilogo.value.ruolo?.ruoloBase == null}"></td>
 														<td th:unless="${riepilogo.key == null}">
-																<input class="form-control" type="number" th:field="${eventoWrapper.riepilogoRuoliFSC[__${riepilogo.key}__]?.numeroPartecipanti}" th:disabled="${isEditSemiBloccato}" />
+																<input class="form-control" type="number" th:field="${eventoWrapper.riepilogoRuoliFSC[__${riepilogo.key}__]?.numeroPartecipanti}" th:disabled="${isEditSemiBloccato or (isRiedizione
+																		and (eventoWrapper.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).TRAINING_INDIVIDUALIZZATO
+																			or eventoWrapper.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).GRUPPI_DI_MIGLIORAMENTO))}" />
 														</td>
 														<td th:if="${riepilogo.key == null}"></td>
 														<td th:text="${riepilogo.value?.tempoDedicato}"></td>
