--- a/src/main/resources/templates/evento/allegaContrattiSponsor.html
+++ b/src/main/resources/templates/evento/allegaContrattiSponsor.html
@@ -48,7 +48,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.lista_sponsor_provider_evento(${sponsorWrapper.denominazioneProvider}, ${#numbers.formatInteger(sponsorWrapper.eventoId,0)})}">Lista Sponsor del Provider () per l'evento id: </h2>
+						<h2 th:text="#{label.lista_sponsor_provider_evento(${sponsorWrapper.denominazioneProvider}, ${sponsorWrapper.codiceIdentificativoEvento})}">Lista Sponsor del Provider () per l'evento id: </h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
 								<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|${returnLink}|}"></a>
