--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -792,7 +792,7 @@
 								</div>
 
 								<!-- CREDITI FORMATIVI PROPOSTI-->
-								<div class="item form-group">
+								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')} ? 'bad'">
 									<label class="control-label col-xs-1">
 										<span>32</span>
 									</label>
@@ -809,6 +809,7 @@
 										</label>
 										</span>
 									</div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.crediti')}__}"></div>
 								</div>
 
 								<!-- CREDITI FORMATIVI INSERITI DALL'UTENTE-->
