--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -199,6 +199,38 @@
 			</div>
 		</th:block>
 
+		<!-- MODALE QUIETANZA -->
+		<div id="modalQuietanza" class="modal fade modal-quietanza" data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel1" th:text="#{label.allega_quietanza_di_pagamento}"></h4>
+					</div>
+					<div class="modal-body">
+						<form id="form-blocca-provider" class="form-horizontal"
+							method="post" enctype="multipart/form-data"
+							novalidate="novalidate">
+							<div class="item form-group" id="fileQuietanza">
+								<th:block th:include="fragments/allegatiext :: allegatiext(quietanzaWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_QUIETANZA_PAGAMENTO}', quietanzaPagamento, null, null, null, false, null, false)" ></th:block>
+							</div>
+							<div></div>
+
+							<input id="submitButton" type="submit" style="display: none;" />
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+							<input th:if="${quietanzaWrapper.returnLink == null}" type="hidden" th:value="${#strings.substring(#httpServletRequest.requestURI,#strings.indexOf(#httpServletRequest.requestURI,#httpServletRequest.contextPath) + #strings.length(#httpServletRequest.contextPath))}" name="returnLink" />
+							<input th:unless="${quietanzaWrapper.returnLink == null}" type="hidden" th:field="${quietanzaWrapper.returnLink}" />
+						</form>
+					</div>
+					<div class="modal-footer">
+						<label for="submitButton" class="btn btn-success pull-right" th:text="#{label.applica}">Applica</label>
+						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -286,8 +318,13 @@
 									<td class="text-full-length" th:if="${#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria()}">
 										<a class="btn btn-primary min-icon-width" th:if="${evento.canEdit() or #authentication.principal.isSegreteria()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}" th:title="#{label.modifica}"><i class="fa fa-pencil"></i></a>
 										<button th:if="${#authentication.principal.account.isSegreteria() and evento.canSegreteriaShiftData()}" type="button" class="btn btn-primary min-icon-width" th:onclick="|openModalScadenze(${evento.id}, '${evento.dataScadenzaPagamento}', '${evento.dataScadenzaInvioRendicontazione}')|" th:title="#{label.abilita}"><i class="fa fa-unlock-alt"> </i></button>
+
 										<!-- TODO DISABILITATO PER LA PRODUZIONE -->
-										<a class="btn btn-success btn-min-icon-width" th:if="${evento.canDoPagamento()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/paga|}" th:title="#{label.paga}"><i class="fa fa-euro"></i></a>
+										<th:block th:if="${evento.canDoPagamento()}">
+											<a th:if=		"${evento.provider.myPay == true or (evento.provider.myPay == null and evento.provider.isGruppoA())}" class="btn btn-success btn-min-icon-width" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/paga|}" th:title="#{label.paga}"><i class="fa fa-euro"></i></a>
+											<button th:if=	"${evento.provider.myPay == false or (evento.provider.myPay == null and evento.provider.isGruppoB())}" class="btn btn-success btn-min-icon-width" th:onclick="|openModaleAllegaQuietanza(${evento.provider.id},${evento.id})|" th:title="#{label.allega_quietanza}"><i class="fa fa-euro"></i></button>
+										</th:block>
+										<a target="_blank" th:if="${evento.pagato and evento.pagatoQuietanza}" class="btn btn-success btn-min-icon-width" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/quietanzaPagamento/show|}" th:title="#{label.visualizza_quietanza}"><i class="fa fa-euro"> </i></a>
 
 										<a class="btn btn-primary min-icon-width" th:if="${#authentication.principal.account.isSegreteria()}" th:href="@{|/audit/entity/${evento.getAuditEntityType()}/entityId/${evento.id}|}" th:title="#{label.registro_operazioni}"><i class="fa fa-book"></i></a>
 										<a class="btn btn-warning min-icon-width" th:if="${evento.canDoRendicontazione()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}" th:title="#{label.rendiconto}"><i class="fa fa-file-text"></i></a>
@@ -400,6 +437,13 @@
 				    if([[${scadenzeEventoWrapper != null && scadenzeEventoWrapper.submitScadenzeError == true}]])
 				    	$("#scadenze-evento").modal("show");
 
+					//MODAL QUIETANZA
+					$("#modalQuietanza").on("hide.bs.modal", function() {
+			    		closeModaleAllegaQuietanza();
+			    	})
+
+			    	if([[${quietanzaWrapper.submitError != null and quietanzaWrapper.submitError == true}]])
+			    		showErrorInModal();
 				})
 
 				function openModalScadenze(idEvento, dataPagamento, dataRendicontazione) {
@@ -421,6 +465,31 @@
 					$("#form-scadenze-evento")[0].reset();
 					$("#dataPagamento").val("");
 					$("#dataRendicontazione").val("");
+				}
+
+
+				//MODAL QUIETANZA
+				function openModaleAllegaQuietanza(providerId,eventoId) {
+					$("#modalQuietanza").modal("show");
+					$("#modalQuietanza form").attr("action", [[@{|/provider/|}]] + providerId + '/evento/' + eventoId +'/quietanzaPagamento/save/');
+				}
+
+				function closeModaleAllegaQuietanza() {
+					$("#modalQuietanza form")[0].reset();
+					$("#modalQuietanza form").attr("action", "");
+					$("#quietanzaPagamento\\.id").val('');
+					$("#quietanzaPagamento\\.nomeFile").val('');
+					$("#quietanzaPagamento_label").text([[#{label.nessun_file_selezionato}]]).removeAttr('href');
+				}
+
+				function showErrorInModal() {
+					var $messageAlert = $("<div class='alert'></div>");
+					$messageAlert.text([[#{error.empty}]]);
+					var $item = $("#quietanzaPagamento").closest(".item")
+					$item.find(".alert").remove();
+	 				$item.append($messageAlert);
+					$item.addClass("bad");
+					$("#modalQuietanza").modal("show");
 				}
 
 			/*]]>*/
