--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -322,7 +322,7 @@
 				else if([[${#authentication.principal.isProvider()}]]){
 					colonne = [0,1,2,4,5,6,7,8,9,10,11,12]
 					confermati = 11
-					date = [5,6,10]publi cccc
+					date = [5,6,10]
 				}
 				else {
 					colonne = [0,1,2,4,5,6,7,8,9,10,11]
