--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -194,6 +194,16 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+							<div class="tile-stats clickable" onclick="goTo('accreditamento/standart/list')">
+								<div class="icon"><i class="fa fa-calendar"></i></div>
+								<div class="col-xs-10">
+				                	<div class="count" th:text="${homeWrapper.domandeTipoStandart}"></div>
+				                	<h3 class="tile-h3" th:text="${homeWrapper.domandeTipoStandart == 1} ? #{label.domanda_accreditamento} : #{label.domande_accreditamento}"></h3>
+				                	<p class="count-text" th:text="#{label.tipo_standart}"></p>
+								</div>
+							</div>
+						</div>
 					</th:block>
 
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
