Correzione Label vaschetta

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -114,7 +114,7 @@
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.domandeTipoStandart}"></div>
 			                	<h3 class="tile-h3" th:text="${homeWrapper.domandeTipoStandart == 1} ? #{label.domanda_accreditamento} : #{label.domande_accreditamento}"></h3>
-			                	<p class="count-text" th:text="#{label.tipo_standart}"></p>
+			                	<p class="count-text" th:text="#{label.valutazione_sul_campo}"></p>
 							</div>
 						</div>
 					</div>
@@ -210,7 +210,7 @@
 								<div class="col-xs-10">
 				                	<div class="count" th:text="${homeWrapper.domandeTipoStandart}"></div>
 				                	<h3 class="tile-h3" th:text="${homeWrapper.domandeTipoStandart == 1} ? #{label.domanda_accreditamento} : #{label.domande_accreditamento}"></h3>
-				                	<p class="count-text" th:text="#{label.tipo_standart}"></p>
+				                	<p class="count-text" th:text="#{label.valutazione_sul_campo}"></p>
 								</div>
 							</div>
 						</div>
